--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "apollo-boost": "^0.4.7",
     "draft-js": "^0.11.4",
     "graphql": "^14.6.0",
+    "query-string": "^5.1.1",
     "react": "^16.12.0",
     "react-apollo": "^3.1.3",
     "react-apollo-hooks": "^0.5.0",
