--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^16.0.0",
+    "@ckeditor/ckeditor5-react": "^2.1.0",
     "@material-ui/core": "^4.9.0",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/lab": "^4.0.0-alpha.41",
@@ -18,6 +20,8 @@
     "react-apollo-hooks": "^0.5.0",
     "react-dom": "^16.12.0",
     "react-draft-wysiwyg": "^1.14.4",
+    "react-icons": "^3.9.0",
+    "react-images-upload": "^1.2.7",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "reactjs-tag-input": "^2.0.13"
